// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-exclude-stories exclude-stories-array.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "date": 2020-03-15T02:44:51.151Z,
    "dateModified": 2020-03-15T02:45:58.763Z,
    "excludeStories": Array [
      "story1",
      "story2",
    ],
    "package": "76c2c8e1f9093de2093c4071b70d6c6d",
    "title": "Storybook/Blocks/EXCLUDEStoryArray",
  },
  "packages": Object {
    "76c2c8e1f9093de2093c4071b70d6c6d": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "76c2c8e1f9093de2093c4071b70d6c6d",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/exclude-stories/exclude-stories-array.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "story3": Object {
      "arguments": Array [],
      "id": "story3",
      "loc": Object {
        "end": Object {
          "column": 30,
          "line": 8,
        },
        "start": Object {
          "column": 22,
          "line": 8,
        },
      },
      "name": "story3",
      "source": "() => {}",
    },
  },
  "transformed": "export default {
  title: 'Storybook/Blocks/EXCLUDEStoryArray',
  excludeStories: ['story1', 'story2'],
};

export const story1 = () => {};
export const story2 = () => {};
export const story3 = () => {};
",
}
`;

exports[`csf-exclude-stories exclude-stories-regex.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "date": 2020-03-15T02:46:05.885Z,
    "dateModified": 2020-03-15T02:46:35.035Z,
    "excludeStories": "story(2|3)",
    "package": "ee6d4e5808915deb32b828cdb4d27d49",
    "title": "Storybook/Blocks/ExcludeStoryRegex",
  },
  "packages": Object {
    "ee6d4e5808915deb32b828cdb4d27d49": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "ee6d4e5808915deb32b828cdb4d27d49",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/exclude-stories/exclude-stories-regex.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "story1": Object {
      "arguments": Array [],
      "id": "story1",
      "loc": Object {
        "end": Object {
          "column": 30,
          "line": 6,
        },
        "start": Object {
          "column": 22,
          "line": 6,
        },
      },
      "name": "story1",
      "source": "() => {}",
    },
  },
  "transformed": "export default {
  title: 'Storybook/Blocks/ExcludeStoryRegex',
  excludeStories: /story(2|3)/,
};

export const story1 = () => {};
export const story2 = () => {};
export const story3 = () => {};
",
}
`;

exports[`csf-exclude-stories include-stories-array.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "date": 2020-03-15T01:51:20.615Z,
    "dateModified": 2020-03-15T02:44:23.355Z,
    "includeStories": Array [
      "story1",
      "story2",
    ],
    "package": "92f51e3abe9588702080ee898d79e849",
    "title": "Storybook/Blocks/IncludeStoryArray",
  },
  "packages": Object {
    "92f51e3abe9588702080ee898d79e849": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "92f51e3abe9588702080ee898d79e849",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/exclude-stories/include-stories-array.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "story1": Object {
      "arguments": Array [],
      "id": "story1",
      "loc": Object {
        "end": Object {
          "column": 30,
          "line": 6,
        },
        "start": Object {
          "column": 22,
          "line": 6,
        },
      },
      "name": "story1",
      "source": "() => {}",
    },
    "story2": Object {
      "arguments": Array [],
      "id": "story2",
      "loc": Object {
        "end": Object {
          "column": 30,
          "line": 7,
        },
        "start": Object {
          "column": 22,
          "line": 7,
        },
      },
      "name": "story2",
      "source": "() => {}",
    },
  },
  "transformed": "export default {
  title: 'Storybook/Blocks/IncludeStoryArray',
  includeStories: ['story1', 'story2'],
};

export const story1 = () => {};
export const story2 = () => {};
export const story3 = () => {};
",
}
`;

exports[`csf-exclude-stories include-stories-regex.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "date": 2020-03-15T01:54:06.010Z,
    "dateModified": 2020-03-15T02:43:50.375Z,
    "includeStories": "story(2|3)",
    "package": "3a231bd136bb90701919c32cb0ed959c",
    "title": "Storybook/Blocks/IncludeStoryRegex",
  },
  "packages": Object {
    "3a231bd136bb90701919c32cb0ed959c": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "3a231bd136bb90701919c32cb0ed959c",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/exclude-stories/include-stories-regex.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "story2": Object {
      "arguments": Array [],
      "id": "story2",
      "loc": Object {
        "end": Object {
          "column": 30,
          "line": 7,
        },
        "start": Object {
          "column": 22,
          "line": 7,
        },
      },
      "name": "story2",
      "source": "() => {}",
    },
    "story3": Object {
      "arguments": Array [],
      "id": "story3",
      "loc": Object {
        "end": Object {
          "column": 30,
          "line": 8,
        },
        "start": Object {
          "column": 22,
          "line": 8,
        },
      },
      "name": "story3",
      "source": "() => {}",
    },
  },
  "transformed": "export default {
  title: 'Storybook/Blocks/IncludeStoryRegex',
  includeStories: /story(2|3)/,
};

export const story1 = () => {};
export const story2 = () => {};
export const story3 = () => {};
",
}
`;
